--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\"",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+  "test": "echo \"Error: no test specified\"",
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CandaceWilliams-91/Comp2156.git"
@@ -19,7 +22,6 @@
   "bugs": {
     "url": "https://github.com/CandaceWilliams-91/Comp2156/issues"
   },
-  
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,8 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "gh-pages": "^6.1.1"
+    "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
-
